<resources>
    <string name="app_name">作業八：賴玟君</string>
    <string name="item">項目：</string>
    <string-array name="meal">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
    <string name="date">日期：</string>
    <string name="amount">金額：</string>
    <string name="input">輸入</string>
    <string name="record">紀錄</string>
    <string name="title_activity_records_">Records_Activity</string>
</resources>
